# Schedulify

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_main  Dockerfile_tests  README.md  main.cpp  main_include.h  model_interfaces.h  run_app.sh  run_tests.sh
controller/: .gitignore  CMakeLists.txt  main.cpp  main_controller.cpp  main_window.cpp
controller/adapters/filters/: schedule_filter.cpp  schedule_filter.h
controller/adapters/thread_workers/: ChatBot.cpp  ChatBot.h  CourseValidator.cpp  CourseValidator.h
controller/adapters/view_models/: course_model.cpp  course_model.h  file_model.cpp  file_model.h  schedule_model.cpp  schedule_model.h
controller/include/: Controller.h  CourseModel.h  ScheduleGenerator.h  base_controller.h  controller_manager.h  course_model.h  course_selection.h  file_input.h  log_display.h  main_controller.h  schedules_display.h
controller/models/: course_model.h  schedule_filter.cpp  schedule_filter.h  schedule_model.cpp  schedule_model.h
controller/src/: Controller.cpp  CourseModel.cpp  CourseValidator.cpp  ScheduleGenerator.cpp  base_controller.cpp  controller_manager.cpp  course_model.cpp  course_selection.cpp  file_input.cpp  log_display.cpp  main_controller.cpp  schedules_display.cpp
data/: V1.0CourseDB copy.txt  V1.0CourseDB.txt  V1.courseOutput.json  V1.schedOutput.json  V1.schedOutput.jsonnew.json  V1.schedOutput.txt  userInput.txt
include/: CourseLegalComb.h  ScheduleBuilder.h  TimeUtils.h  algoritm.h  main.h  main_app.h  parser.h  postParser.h  preParser.h  schedule_types.h
include/algorithm/: CourseLegalComb.h  schedule_types.h
include/fileHandlers/: parseToJson.h  preParser.h
include/logs/: logManager.h  logger.h
include/main/: main.h  main_app.h
include/parsers/: parseCoursesToVector.h  parseJsonToVector.h  parseSchedToJson.h  parseTextToVector.h  postParser.h  preParser.h
include/schedule_algorithm/: CourseLegalComb.h  ScheduleBuilder.h  TimeUtils.h  schedule_types.h
logger/: logger.cpp  logger.h
model/: .gitignore  CMakeLists.txt  Dockerfile_main  Dockerfile_tests  main_model.cpp  main_model_menu.cpp
model/include/db/: ScheduleDatabaseWriter.h  db_courses.h  db_entities.h  db_files.h  db_json_helpers.h  db_manager.h  db_schedules.h  db_schema.h  model_db_integration.h
model/include/main/: inner_structs.h  main.h  main_app.h  main_model.h  main_model_menu.h  model_access.h  model_factory.h
model/include/parsers/: ScheduleEnrichment.h  excel_parser.h  jsonParser.h  parseCoursesToJson.h  parseCoursesToVector.h  parseSchedToJson.h  parseToCsv.h  parseToXlsx.h  printSchedule.h  scheduleToMT.h  validate_courses.h
model/include/sched_bot/: apiManager.h  botAdapter.h  claude_api_integration.h  sql_validator.h
model/include/schedule_algorithm/: CourseLegalComb.h  ScheduleBuilder.h  TimeUtils.h  getSession.h  schedule_types.h
model/model-tests/: CMakeLists.txt  ScheduleBuilder_test.cpp  preParser_test.cpp
model/src/db/: ScheduleDatabaseWriter.cpp  cleanup_manager.cpp  db_course.cpp  db_files.cpp  db_json_helpers.cpp  db_manager.cpp  db_schedule.cpp  db_schedules.cpp  db_schema.cpp  model_db_integration.cpp
model/src/logs/: logManager.cpp
model/src/main/: main.cpp  main_app.cpp  main_model.cpp  model_access.cpp  model_factory.cpp
model/src/parsers/: ScheduleEnrichment.cpp  excel_parser.cpp  jsonParser.cpp  parseCoursesToJson.cpp  parseCoursesToVector.cpp  parseSchedToJson.cpp  parseToCsv.cpp  parseToXlsx.cpp  printSchedule.cpp  scheduleToMT.cpp  validate_courses.cpp
model/src/sched_bot/: apiManager.cpp  botAdapter.cpp  claude_api_integration.cpp  sql_validator.cpp
model/src/schedule_algorithm/: CourseLegalComb.cpp  ScheduleBuilder.cpp  TimeUtils.cpp
model/tests/: CMakeLists.txt  CourseLegalComb_test.cpp  postParser_test.cpp  preParser_test.cpp  test_helpers.h
src/: CourseLegalComb.cpp  ScheduleBuilder.cpp  TimeUtils.cpp  algoritm.cpp  completeAlgoritm.cpp  main.cpp  main2.cpp  main_app.cpp  parser.cpp  parser.h  postParser.cpp  preParser.cpp
src/fileHandlers/: parseToJson.cpp  preParser.cpp
src/logs/: logManager.cpp  logger.cpp
src/main/: main.cpp  main_app.cpp
src/parsers/: parseJsonToVector.cpp  parseTextToVector.cpp  postParser.cpp  preParser.cpp  userInputParser.cpp
src/schedule_algorithm/: CourseLegalComb.cpp  ScheduleBuilder.cpp  TimeUtils.cpp
testData/: duplicateUserInput.txt  invalidDB_id.txt  invalidDB_string.txt  invalidUserInput_id.txt
tests/: CMakeLists.txt  CourseLegalComb_test.cpp  ScheduleBuilder_test.cpp  TimeUtils_test.cpp  algorithm_test.cpp  mainAppTests.cpp  parserTest.cpp  postParser_test.cpp  preParser_test.cpp  test_helpers.h
tests/model-tests/: CMakeLists.txt  CourseLegalComb_test.cpp  ScheduleBuilder_test.cpp  TimeUtils_test.cpp  excel_parser_test.cpp  preParser_test.cpp  scheduleEnrichment_test.cpp  test_helpers.h
tests/model-tests/testData/: invalidUserInput_many.txt
tests/model-tests/testData/excel/: emptyExcel.xlsx  invalidExcel_id.xlsx  invalidExcel_string.xlsx  multiSemesterExcel.xlsx  noValidTimeSlots.xlsx  utf8HebrewExcel.xlsx  validExcel.xlsx
tests/model-tests/testData/txt/: invalidUserInput_string.txt
view/: CMakeLists.txt  courseListScreen.qml  course_selection.qml  file_input.qml  inputScreen.qml  loading_overlay.qml  log_display.qml  main.qml  qml.qrc  schedules_display.qml
view/include/: mainwindow.h
view/popups/: AddCoursePopup.qml  ExportMenu.qml  FilterMenu.qml  MainPreferencePopup.qml  PreferenceMenu.qml  SchedBot.qml  SlotBlockMenu.qml  SortMenu.qml
view/src/: mainwindow.cpp  mainwindow.ui
